package com.namusd.jwtredis.config.socket;

import lombok.Data;

@Data
public class FrameRequest {
    private int start;
    private int end;
}
